--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "framer-motion": "^6.3.16",
     "next": "12.1.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.33.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^6.5.5",
