--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-simple-import-sort": "7.0.0",
-    "husky": "7.0.4",
+    "husky": "^8.0.1",
     "jest": "^27.5.1",
     "jotai": "^1.7.0",
     "lint-staged": "12.3.8",
