update: Entryの修正とテストの追加

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "paths": {
       "@/*": ["src/*"],
     },
-    "types": ["jest","@emotion/react/types/css-prop"],
+    "types": ["jest","@emotion/react/types/css-prop", "@testing-library/jest-dom"],
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.setup.js", "jest.config.js"],
   "exclude": ["node_modules"]
