--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "lint": "next lint",
     "lint:eslint": "eslint --cache .",
     "lint:prettier": "prettier --check .",
-    "test": "jest --watch",
     "test-cov": "jest --collectCoverage=true --coverageReporters=json-summary",
     "component": "scaffdog generate",
     "hooks": "scaffdog generate hooks",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "test-storybook"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -28,6 +28,7 @@
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@emotion/react": "^11.9.3",
     "@hookform/resolvers": "^2.9.5",
+    "@storybook/test-runner": "^0.4.0",
     "framer-motion": "^6.3.16",
     "next": "12.1.5",
     "react": "17.0.2",
@@ -44,7 +45,7 @@
     "@storybook/react": "^6.5.5",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/testing-react": "^1.3.0",
-    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "^8.0.0",
     "@types/node": "^17.0.35",
