--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.33.1",
+    "snd-lib": "^1.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
