--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@emotion/react": "^11.9.3",
     "@hookform/resolvers": "^2.9.5",
     "@storybook/test-runner": "^0.4.0",
+    "@supabase/supabase-js": "^1.35.4",
     "framer-motion": "^6.3.16",
     "next": "12.1.5",
     "react": "17.0.2",
