--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@storybook/test-runner": "^0.4.0",
     "@supabase/supabase-js": "^1.35.4",
     "framer-motion": "^6.3.16",
+    "luxon": "^3.0.1",
     "next": "12.1.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.33.1",
     "snd-lib": "^1.0.2",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -50,8 +52,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "^8.0.0",
+    "@types/luxon": "^2.3.2",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
     "css-loader": "^6.7.1",
